--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "bootstrap": "^5.0.2",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.2.5",
-    "vue-router": "^3.5.2"
+    "vue-kinesis": "^1.3.3",
+    "vue-router": "^3.5.2",
+    "vue-svg-loader": "^0.16.0",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
